Actualizado el .toList() de UserResource